# models/transaction-model.ts
@@ -14,14 +14,16 @@ const transactionDbField = {
     deletedBy: 'deleted_by'
 } as const;
 
-type TransactionDbField = keyof typeof transactionDbField;
-
+enum TransactionType {
+    TOPUP = "TOPUP",
+    PAYMENT = "PAYMENT"
+}
 
 interface Transaction {
     id: number;
     userId: string;
-    serviceId: number;
-    transactionType: string;
+    serviceId: number | null;
+    transactionType: TransactionType;
     totalAmount: number;
     invoiceNumber: string;
     createdAt: Date;
@@ -34,15 +36,12 @@ interface Transaction {
 
 type TransactionPrimaryId = Pick<Transaction, 'id'>;
 
-// Other fields either auto generated using default (like balance, createdAt) or nullable
-type TransactionCreate = Pick<Transaction, 'id' | 'userId' | 'serviceId' | 'transactionType' | 'totalAmount' | 'invoiceNumber' | 'createdBy' | 'updatedBy' | 'updatedAt'>;
-
-// jadi nanti ada request untuk topup dan payment tapi dalam 1 service, transaction type di assign di controller (di request ada email, transaction_type, topupAmount | email, transaction_type, serviceCode (di joi tambahkan list valid serviceCode))
+type TransactionCreate = Pick<Transaction, 'userId' | 'serviceId' | 'transactionType' | 'totalAmount' | 'invoiceNumber' | 'createdBy' | 'updatedBy' | 'updatedAt'>;
 
 export {
     transactionDbField,
+    TransactionType,
     Transaction,
     TransactionPrimaryId,
-    TransactionCreate,
-    TransactionDbField
+    TransactionCreate
 };
