# routes/v1/transaction-route.ts
@@ -6,5 +6,6 @@ import { TransactionController } from '../../controllers/transaction-controller'
 const transactionRouterV1 = Router();
 
 transactionRouterV1.get('/balance', authenticateToken, TransactionController.getBalanceForCurrentUser);
+transactionRouterV1.post('/topup', authenticateToken, TransactionController.topUpBalanceForCurrentUser);
 
 export { transactionRouterV1 };
